--- a/Pipfile
+++ b/Pipfile
@@ -11,9 +11,9 @@ adafruit-ampy = "*"
 "jinja2" = "*"
 numpy="*"
 pulsectl = "*"
-zproc = "*"
+zproc = {editable = true, path = "./../zproc"}
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
